--- a/ui/css/styles.css
+++ b/ui/css/styles.css
@@ -1,7 +1,13 @@
 /*Your styles*/
 
- body {
-    margin: 10px;
+html {
+	padding: 0;
+	margin: 0;
+	height: 100%;
+}
+body {
+	margin: 0;
+	padding: 0;
 }
 
 #content {
@@ -11,6 +17,14 @@
     width:100%;
 }
 
+footer {
+	margin: 10;
+	padding: 10;
+	width:100%;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
 
 /*
 Those classes will be edited at runtime with values specified
