--- a/ui/css/styles.css
+++ b/ui/css/styles.css
@@ -1,30 +1,47 @@
 /*Your styles*/
 
 html {
-	padding: 0;
-	margin: 0;
-	height: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
-	margin: 0;
-	padding: 0;
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
 }
 
 #content {
-    margin-right:auto;
-    margin-left:auto;
-    vertical-align:middle;
-    width:100%;
+  margin: 0 auto;
+  padding-top: 24px;
+  max-width: 640px;
+  width: 94%;
 }
 
-footer {
-	margin: 10;
-	padding: 10;
-	width:100%;
-	position:absolute;
-	bottom:0;
-	left:0;
+h3 {
+  margin-top: 0;
 }
+
+/**
+ * Footer Styles
+ */
+
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+}
+
 
 /*
 Those classes will be edited at runtime with values specified
